# novapipe

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CODE_OF_CONDUCT.md  api.md  cli.md  conf.py  contributing.md  index.md  plugin_development.md  quickstart.md  requirements.txt  usage.md
docs/advanced/: branching.md  observability.md  rate_limiting.md  resource_env.md
docs/reference/: novapipe.md
docs/source/: conf.py  index.rst
pipeline_templates/: pipeline.yaml  sample_pipeline.yaml
src/novapipe/: cli.py  logging_conf.py  models.py  runner.py  tasks.py
tests/: conftest.py  test_branching.py  test_cli.py  test_cli_describe.py  test_cli_global_ignore_failures.py  test_cli_playground.py  test_cli_plugin_list_filters.py  test_cli_report.py  test_cli_tutorial.py  test_cli_vars.py  test_logging.py  test_models.py  test_plugin_conflict_resolution.py  test_runner.py  test_runner_dot.py  test_runner_env_injection.py  test_runner_ignore_failure.py  test_runner_multi_output.py  test_runner_rate_limit.py  test_runner_retries.py  test_runner_run_if.py  test_runner_run_unless.py  test_runner_skip_downstream_on_failure.py  test_runner_templating.py  test_runner_timeout.py  test_s3_upload_integration.py  test_summary_json.py
